# igneous

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  vcpkg.json  visualize.py  visualize_coordinates.py  visualize_hodge.py
.github/workflows/: ci.yml  codeql.yml  docs.yml  perf-deep.yml  perf-smoke.yml  release.yml
assets/bench/: MANIFEST.csv
benches/: bench_dod.cpp  bench_geometry.cpp  bench_memory.cpp  bench_pipelines.cpp
docs/: Doxyfile.in  mainpage.md
include/igneous/: algebra.hpp  curvature.hpp  flow.hpp  geometry.hpp  igneous.hpp  memory.hpp  mesh_loader.hpp  mesh_loader_dod.hpp  processing.hpp  simplex.hpp  topology.hpp
include/igneous/core/: algebra.hpp  blades.hpp  gpu.hpp  memory.hpp  parallel.hpp  topology.hpp
include/igneous/data/: buffers.hpp  mesh.hpp  space.hpp  structure.hpp  topology.hpp
include/igneous/data/structures/: diffusion_geometry.hpp  discrete_exterior_calculus.hpp
include/igneous/io/: exporter.hpp  importer.hpp
include/igneous/ops/: curvature.hpp  diffusion.hpp  flow.hpp  geometry.hpp  hodge.hpp  spectral.hpp  transform.hpp
include/igneous/ops/dec/: curvature.hpp  flow.hpp
include/igneous/ops/diffusion/: basis.hpp  forms.hpp  geometry.hpp  hodge.hpp  products.hpp  spectral.hpp
notes/: algebra_roadmap.md  architecture.md  roadmap.md  schizophrenia.md  theory.md
notes/diffgeo_ops/: journal.md
notes/diffgeo_ops/results/round_20260214-211417/cpp/sphere/: form2_spectrum.csv  harmonic1_ambient.csv  harmonic2_ambient.csv  harmonic2_coeffs.csv  points.csv  wedge_h1h1_coeffs.csv
notes/diffgeo_ops/results/round_20260214-211417/cpp/torus/: circular_coordinates.csv  form1_spectrum.csv  harmonic1_ambient.csv  harmonic1_coeffs.csv  harmonic2_ambient.csv
notes/diffgeo_ops/results/round_20260214-211417/reference/sphere/: points.csv  wedge_h1h1_ambient.csv
notes/diffgeo_ops/results/round_20260214-211417/reference/torus/: harmonic1_coeffs.csv
notes/diffgeo_ops/results/round_20260214-211417/report/: parity_report.json  parity_report.md
notes/diffgeo_ops/results/round_20260214-211442/cpp/sphere/: circular_coordinates.csv  harmonic1_coeffs.csv  wedge_h1h1_ambient.csv
notes/diffgeo_ops/results/round_20260214-211442/cpp/torus/: harmonic2_coeffs.csv  wedge_h1h1_ambient.csv
notes/diffgeo_ops/results/round_20260214-211442/reference/sphere/: harmonic1_ambient.csv  harmonic1_coeffs.csv  harmonic2_ambient.csv  harmonic2_coeffs.csv
notes/diffgeo_ops/results/round_20260214-211442/reference/torus/: form2_spectrum.csv  harmonic2_ambient.csv
notes/diffgeo_ops/results/round_20260214-211442/report/: parity_report.json  parity_report.md
notes/diffgeo_ops/results/round_20260214-211442/report/plots/: plots_index.md
notes/diffgeo_ops/results/round_20260214-211603/cpp/sphere/: circular_coordinates.csv  form1_spectrum.csv  wedge_h1h1_coeffs.csv
notes/diffgeo_ops/results/round_20260214-211603/cpp/torus/: harmonic2_ambient.csv  points.csv
notes/diffgeo_ops/results/round_20260214-211603/reference/torus/: form1_spectrum.csv  harmonic1_ambient.csv  wedge_h1h1_coeffs.csv
notes/diffgeo_ops/results/round_20260214-211603/report/: parity_report.json  parity_report.md
notes/diffgeo_ops/results/round_20260214-211622/cpp/sphere/: harmonic1_ambient.csv  harmonic1_coeffs.csv  harmonic2_coeffs.csv  wedge_h1h1_ambient.csv
notes/diffgeo_ops/results/round_20260214-211622/cpp/torus/: harmonic1_ambient.csv  harmonic2_coeffs.csv  wedge_h1h1_ambient.csv
notes/diffgeo_ops/results/round_20260214-211622/reference/sphere/: circular_coordinates.csv  form1_spectrum.csv  form2_spectrum.csv
notes/diffgeo_ops/results/round_20260214-211622/reference/torus/: harmonic2_coeffs.csv
notes/diffgeo_ops/results/round_20260214-211622/report/: parity_report.json  parity_report.md
notes/diffgeo_ops/results/round_20260214-211622/report/plots/: plots_index.md
notes/diffgeo_ops/results/round_20260214-211636/report/: parity_report.json  parity_report.md
notes/diffusion/: journal.md
notes/hodge/: journal.md
notes/perf/: .gitignore  backend-guidance.md  final-report.md  journal.md  main-vs-branch.md  metrics.csv  migration.md
notes/structure_refactor/: journal.md
scripts/dev/: format.sh  lint.sh
scripts/diffgeo/: compare_diffgeo_ops.py  generate_input_manifolds.py  run_cpp_diffgeo_ops.sh  run_parity_round.sh  run_reference_diffgeo_ops.py  setup_reference_env.sh
scripts/diffgeo/diagnostics/: plot_diffgeo_ops.py
scripts/diffusion/: report_hodge.py
scripts/hodge/: compare_circular_operator_debug.py  compare_hodge_outputs.py  generate_input_torus.py  plot_hodge_outputs.py  run_cpp_hodge.sh  run_parity_round.sh  run_reference_hodge.py  setup_reference_env.sh
scripts/perf/: append_bench_metrics.sh  compare_against_main.py  download_datasets.sh  profile_counters.sh  profile_time.sh  run_deep_bench.sh
src/: curvature_main.cpp  main.cpp  main_diffusion.cpp  main_diffusion_geometry.cpp  main_diffusion_topology.cpp  main_hodge.cpp  main_mesh.cpp  main_point.cpp  main_spectral.cpp
src/core/: gpu_stub.cpp  metal_diffusion.mm
tests/: algebra.cpp  benchmark.cpp  benchmark_algebra.cpp  benchmark_memory.cpp  main.cpp  simplex.cpp  test_algebra.cpp  test_diffgeo_cli_outputs.sh  test_diffgeo_parity_optional.sh  test_hodge_cli_outputs.sh  test_hodge_parity_optional.sh  test_io_meshes.cpp  test_ops_curvature_flow.cpp  test_ops_diffusion_basis.cpp  test_ops_diffusion_forms.cpp  test_ops_diffusion_wedge.cpp  test_ops_geometry.cpp  test_ops_hodge.cpp  test_ops_hodge_decomposition.cpp  test_ops_hodge_regression.cpp  test_ops_spectral_geometry.cpp  test_ops_spectral_regression.cpp  test_ops_transform.cpp  test_structure_dec.cpp  test_structure_diffusion_geometry.cpp  test_topology_diffusion.cpp  test_topology_triangle.cpp
tests/support/: synthetic_meshes.hpp  test_env.hpp  tolerances.hpp
visualizations/: README.md  _common.py  view_main_diffusion.py  view_main_diffusion_geometry.py  view_main_diffusion_topology.py  view_main_hodge.py  view_main_mesh.py  view_main_point.py  view_main_spectral.py
(+9 files in other folders)
